--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,18 +1,11 @@
 <!doctype html>
-<!--[if lt IE 7]><html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
-<!--[if (IE 7)&!(IEMobile)]><html class="no-js lt-ie9 lt-ie8" lang="en"><![endif]-->
-<!--[if (IE 8)&!(IEMobile)]><html class="no-js lt-ie9" lang="en"><![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang="en"><!--<![endif]-->
-<head>
+<html lang="{{ page.lang | default: site.lang | default: "en" }}">
+
 {% include _head.html %}
-</head>
 
 <body class="home">
 
 {% include _navigation.html %}
-{% if page.image.feature %}
-{% include _page-image.html %}
-{% endif %}
 
 <div id="main" role="main">
   <div id="index">
