--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -4,11 +4,12 @@
 
     <title>{% if page.title %}{{ page.title }} &#8211; {% endif %}{{ site.title }}</title>
 
-    {% if page.excerpt %}<meta name="description" content="{{ page.excerpt | strip_html }}">{% endif %}
-        <meta name="keywords" content="{{ page.tags | join: ', ' }}">
-    {% if page.author %}
-      {% assign author = site.data.authors[page.author] %}{% else %}{% assign author = site.owner %}
+    <!-- Meta -->
+    {% if page.excerpt %}
+    <meta name="description" content="{{ page.excerpt | strip_html }}">
     {% endif %}
+    <meta name="keywords" content="{{ page.tags | join: ', ' }}">
+    <meta name="author" content="{{ site.owner.name }}">
 
     {% include _open-graph.html %}
 
