change to gem-based xml feed
so I don't have to write a feed page anymore

--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -22,7 +22,7 @@
     {% endcapture %}
 
     <link rel="canonical" href="{{ canonical }}">
-    <link href="{{ site.url }}/feed.xml" type="application/atom+xml" rel="alternate" title="{{ site.title }} Feed">
+    {% feed_meta %}
 
 
     <!-- For all browsers -->
