--- a/_includes/_navigation.html
+++ b/_includes/_navigation.html
@@ -1,14 +1,23 @@
-<div>
-	<div>
-		<a href="/">{{ site.title }}</a>
-	</div>
-	<div class="top-navigation">
-		<nav role="navigation">
-		    <ul>
-		        {% for link in site.data.navigation %}
-				    <li><a href="{{ link.url }}" {% if link.url contains 'http' %}{% endif %}>{{ link.title }}</a></li>
-				{% endfor %}
-		    </ul>
-		</nav>
-	</div>
-</div>
+<nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <a class="navbar-brand" href="/">{{ site.title }}</a></a>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+		{% for link in site.data.navigation %}
+			{% if link.url == page.dir %}
+				{% assign class = "nav-item active" %}
+			{% else %}
+				{% assign class = "nav-link" %}
+			{% endif %}
+			<li class="{{ class }}"><a href="{{ link.url }}">{{ link.title }}</a></li>
+		{% endfor %}
+	</ul>
+    <form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="text" placeholder="Search">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    </form>
+  </div>
+</nav>
