forgot to remove the `!default` marker

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -516,7 +516,7 @@ $navbar-inverse-active-color:          rgba($white,1) !default;
 $navbar-inverse-disabled-color:        rgba($white,.25) !default;
 
 // edited to remove "str-replace" function (I don't know why it doesn't work with it in, but Safari hates it)
-$navbar-inverse-toggler-bg: (url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='#{$navbar-inverse-color}' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E")) !default;
+$navbar-inverse-toggler-bg: (url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='#{$navbar-inverse-color}' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E"));
 
 $navbar-inverse-toggler-border:        rgba($white,.1) !default;
 
