--- a/_includes/_navigation.html
+++ b/_includes/_navigation.html
@@ -15,9 +15,6 @@
 			<li class="{{ class }}"><a href="{{ link.url }}">{{ link.title }}</a></li>
 		{% endfor %}
 	</ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="text" placeholder="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
+    <!-- TODO: search function -->
   </div>
 </nav>
