--- a/_includes/_video-embed.html
+++ b/_includes/_video-embed.html
@@ -1,3 +1,4 @@
 <figure>
 <iframe width="560" height="315" src="//www.youtube.com/embed/{{ include.id }}" frameborder="0" allowfullscreen="1"> </iframe>
 </figure>
+<!-- TODO: replace this file. It's only here to get jekyll to compile -->
