--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,22 +1,30 @@
 ---
 layout: default
 ---
-<div class="container">
-{% for i in (0..2) %}
-     <div class="row-{{ i | plus: 1 }}">
-    {% capture foo %} {% cycle 0, 3, 6 %} {% endcapture %}
-{% for post in site.posts limit:3 offset:foo %}
-    <div class="col">
-        <div class="card">
-            <div class="card-block">
-                <img class="card-img-top" src="{% if post.ogimage %}{{ site.url }}{{ post.ogimage }}{% else %}{{ site.url }}{{ site.og-image-default }}{% endif %}" alt="post image">
-                <h3 class="card-title"><a href="{{ post.url }}" title="{{ post.title }}">{{ post.title | markdownify | remove: '<p>' | remove: '</p>'}}</a></h3>
-                <p class="card-text">{{ post.excerpt | markdownify  | remove: '<p>' | remove: '</p>'}}</p>
+<div class="album container">
+
+    <div class="row justify-content-center">
+{% for post in site.posts limit:9 %}
+        <div class="col-xs-1">
+            <div class="card">
+                <div class="card-block">
+                    {% if post.ogimage %} <!-- if there is an image associated with the post, show it -->
+                    <img class="card-img-top" src="{{ site.url }}{{ post.ogimage }}" alt="post image">
+                    {% endif %}
+                    <h3 class="card-title"><a href="{{ post.url }}" title="{{ post.title }}">{{ post.title | markdownify | remove: '<p>' | remove: '</p>'}}</a></h3>
+                    <p class="card-text">{{ post.excerpt | markdownify  | remove: '<p>' | remove: '</p>'}}</p>
+                    <div class="card-footer">
+                      <small class="text-muted align-bottom">
+                          {% if post.modified %}Modified: {{ post.modified | date: "%B %d, %Y" }}
+                          {% else %}
+                          Posted: {{ post.date | date: "%B %d, %Y" }}
+                          {% endif %}
+                      </small>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
 {% endfor %}
+    </div>
 
-    </div>
-{% endfor %}
 </div>
