--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -1,5 +1,3 @@
-$body-bg: #faf9fb;
-
 // Be sure to remove the !default flag from override values.
 
 // Colors
@@ -7,7 +5,7 @@ $body-bg: #faf9fb;
 // Grayscale and brand colors for use across Bootstrap.
 
 // Start with assigning color names to specific hex values.
-$white:  #fff !default;
+$white:  #fafcfc;
 $black:  #000 !default;
 $red:    #d9534f !default;
 $orange: #f0ad4e !default;
