started restructure of post

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -80,6 +80,18 @@ footer svg path {
     background: $twitter-color;
 }
 
+article {
+
+}
+
+.post-footer {
+
+}
+
+.byline {
+
+}
+
 // .acn {
 //   background-color: lighten($border-color,70);
 //   padding: 1em;
