toc, asides, footnotes done(ish) Images next!

--- a/_includes/_toc.html
+++ b/_includes/_toc.html
@@ -1,10 +1,7 @@
-<section id="table-of-contents" class="toc">
-  <header>
-    <h3>Overview</h3>
-  </header>
-<div id="drawer" markdown="1">
-*  Auto generated table of contents
-{:toc}
+<section id="table-of-contents" class="card ml-5 float-right">
+<h4 class="card-header">Overview</h4>
+<div id="toc-list" markdown="1" class="card-block">
+* this unordered seed list will be replaced by toc as unordered list
+{:toc .list-group}
 </div>
-</section><!-- /#table-of-contents -->
-<!-- TODO: replace this file. It's only here to get jekyll to compile -->
+</section>
