--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -17,25 +17,24 @@ sitemap: false
 }
 
 .album {
-  // padding-top: 1rem;
   padding-bottom: 1rem;
 }
-.card {
+.album .card {
   width: 22rem;
   margin:.25rem;
   margin-bottom: 2rem;
 }
 
-.card-block {
+.album .card-block {
     padding:.5rem;
 }
 
-.card-img-top {
+.album .card-img-top {
   width:100%;
   margin-bottom: .75rem;
 }
 
-.card-footer{
+.album .card-footer{
     text-align: right;
     border:0;
     background-color: inherit;
@@ -80,44 +79,41 @@ footer svg path {
     background: $twitter-color;
 }
 
-article {
-
+#markdown-toc li {
+    list-style-type:none;
 }
 
-.post-footer {
-
+.acn {
+    @extend .card;
+    padding: 1em;
+    background-color: lighten($brand-primary,65%);
 }
 
-.byline {
-
+.aside {
+    @extend .card-block;
+    background-color: lighten($brand-primary,70%);
 }
 
-// .acn {
-//   background-color: lighten($border-color,70);
-//   padding: 1em;
-//   border: 1px $border-color solid;
-// }
-//
-// div.acn {
-//   padding-bottom: 0;
-//   margin-bottom: 1em;
-// }
-//
-// .gallerypage img.thumbnail {
-//   max-height: 300px;
-//   max-width: 300px;
-//   width: auto;
-//   height: auto;
-//   margin:5px;
-// }
-//
-//
-// nav.pagination {
-//   text-align:center;
-// }
-//
-//
-//
+p.aside::before {
+    content: "aside  ";
+    font-style: italic;
+}
+.footnotes::before {
+    content: "Footnotes";
+    font-style: italic;
+}
+.footnotes {
+    border-top: 1px lighten($brand-primary,65%) solid;
+    padding-top: 1rem;
+}
+
+.footnotes p {
+    padding:0;
+}
+a:hover {
+    color: $body-bg;
+    background-color: lighten($link-hover-color,40%);
+}
 // pre {
 //   line-height: 1.5;
 //   overflow-x: auto;
@@ -139,25 +135,6 @@ article {
 //   text-align:center;
 // }
 //
-// /* asides */
-//
-// .aside {
-//   background-color: lighten($text-color,70);
-//   color: lighten($textcolor,20);
-//   padding: .5em;
-//   // width:40%;
-//   // margin-left:1em;
-//   // float:right;
-// }
-//
-// .aside::before {
-//   content: "Aside  ";
-//   font-style:italic;
-// }
-//
-// div.aside, div.aside p {
-//   padding-bottom: 0px;
-// }
 //
 // /* my image css */
 //
@@ -198,68 +175,4 @@ article {
 // .image-s-caption {
 //   display: block;
 //   color: lighten($text-color, 20);
-// }
-//
-//
-//
-//
-// // Author module (lifted/adapted from page.scss)
-// // .article-author-bottom {
-// // 	margin-bottom: 1em;
-// // 	@media #{$small} {
-// // 		display: none;
-// // 	}
-// // 	.bio-photo {
-// //     max-width: 150px;
-// // 		margin: 0 25px 10px 0;
-// // 	}
-// //
-// // 	.soc {
-// //     display:inline-block;
-// //   }
-// //
-// // 	h3 {
-// //     display:inline-block;
-// //     font-size: 125%;
-// //     margin-top: 0;}
-// //
-// // 	p.slogan {
-// //     display:block;
-// //     font-size: 80%;
-// //   }
-// //
-// //   p.connect {
-// //     display:block;
-// //     font-size:80%;
-// //     font-style: italic;
-// //   }
-// //
-// //   p.rights {
-// //     text-align: right;
-// //     font-size: 60%;
-// //     margin-bottom:0;
-// //   }
-// //
-// //   @media #{$large} {
-// // 		h3,
-// // 		p {
-// //       max-width: inherit;
-// // 		}
-// //     .bio-photo{ max-width:150px;}
-// // 	}
-// // }
-//
-// footer {
-//   border-top: 1px solid lighten($border-color,70);
-//   border-bottom: 1px solid lighten($border-color,70);
-//   padding:10px;
-// }
-//
-// // Center the menu/navigation button when small screen
-// .navicon-lines-button {
-//   display:block;
-//   margin: 0 auto;
-// }
-// .nav .navtoogle {
-//   background-color: lighten($primary, 15);
 // }
